@@ -1,0 +1,15 @@
+FCN_FILE_DIRS += scripts/+matlab/+lang
+
+%canon_reldir%_FCN_FILES = \
+  %reldir%/makeUniqueStrings.m \
+  %reldir%/makeValidName.m
+
+%canon_reldir%dir = $(fcnfiledir)/+matlab/+lang
+
+%canon_reldir%_DATA = $(%canon_reldir%_FCN_FILES)
+
+FCN_FILES += $(%canon_reldir%_FCN_FILES)
+
+PKG_ADD_FILES += %reldir%/PKG_ADD
+
+DIRSTAMP_FILES += %reldir%/$(octave_dirstamp)
