@@ -5,6 +5,7 @@
 %canon_reldir%_MAINTAINERCLEANFILES =
 
 include %reldir%/+containers/module.mk
+include %reldir%/+matlab/+lang/module.mk
 include %reldir%/audio/module.mk
 include %reldir%/deprecated/module.mk
 include %reldir%/elfun/module.mk
