@@ -133,7 +133,7 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
     argument to print) by default.  This makes more sense for EPS
     files which are normally embedded within other documents, and is
     Matlab compatible.  If necessary use the "-loose" option to
-    reproduce figures as they appeared in previous versions of Octave. 
+    reproduce figures as they appeared in previous versions of Octave.
 
  ** It is now possible to use files and folders containing Unicode
     characters in Windows.
@@ -166,6 +166,8 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
       ordeig
       savefig
       uitable
+      matlab.lang.makeValidName
+      matlab.lang.makeUniqueStrings
 
  ** Legacy functions.
 
